--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,31 @@
-certifi==2017.4.17
+certifi==2018.8.13
 chardet==3.0.4
 click==6.7
-dash-core-components==0.18.1
-dash-html-components==0.8.0
-dash-renderer==0.11.3
-dash==0.21.0
-decorator==4.0.11
-enum34==1.1.6
-flask-cors
-Flask==0.12.2
+dash==0.34.0
+dash-core-components==0.27.1
+dash-html-components==0.11.0
+dash-renderer==0.13.0
+decorator==4.3.0
+Flask==1.0.2
 Flask-Compress==1.4.0
-Flask-SeaSurf==0.2.2
-functools32==3.2.3.post2
 gunicorn==19.9.0
-idna==2.5
+idna==2.7
 ipython-genutils==0.2.0
 itsdangerous==0.24
-Jinja2==2.9.6
+Jinja2==2.10
 jsonschema==2.6.0
-jupyter-core==4.3.0
+jupyter-core==4.4.0
 MarkupSafe==1.0
-nbformat==4.3.0
-numpy==1.11.3
-pandas==0.19.2
-pandas-datareader==0.3.0.post0
-plotly==2.4.1
-python-dateutil==2.6.0
-pytz==2017.2
-redis==2.10.5
-requests==2.18.1
-requests-file==1.4.2
-requests-ftp==0.3.1
-rq==0.8.0
-six==1.10.0
+nbformat==4.4.0
+plotly==3.1.1
+pytz==2018.5
+requests==2.19.1
+retrying==1.3.3
+six==1.11.0
 traitlets==4.3.2
-urllib3==1.21.1
-Werkzeug==0.12.2
-wheel==0.26.0
+urllib3==1.23
+Werkzeug==0.14.1
+numpy==1.12.0
+pandas==0.22.0
+simple-salesforce==0.74.2
+dash-table-experiments==0.6.0
